--- a/#source/header.html
+++ b/#source/header.html
@@ -23,7 +23,24 @@
             <p>С 9:00 до 17:00 без выходных</p>
         </div>
         <div class="burger">
-            <img src="img/header/sidebar.png" alt="иконка меню">
+            <a href="#popup-menu"><img src="img/header/new-sidebar.png" alt="иконка меню"></a>
         </div>
     </div>
 </header>
+
+<div id="popup-menu" class="popup-menu">
+    <a href="#" class="popup-menu__area"></a>
+    <div class="popup-menu__body">
+        <div class="popup-menu__content">
+            <a href="#" class="popup-menu__close">+</a>
+            <div class="popup-menu__heading">Важная информация:</div>
+            <div class="list-menu">
+                <ul class="menu-ul">
+                    <li><a href="#">Услуги</a></li>
+                    <li> <a href="#">Контакты</a></li>
+                    <li><a href="#">О нас</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</div>
