--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <script src="js/script.js" defer></script>
     <title>СДВ Медика</title>
 </head>
 <body>
@@ -193,15 +192,15 @@
                             <h1 class="form__title">Запись на прием</h1>
                             <div class="form__item">
                                 <label for="formName" class="form__label">Имя*:</label>
-                                <input id="formName" type="text" name="name" class="form__input">
+                                <input id="formName" type="text" name="name" class="form__input _req">
                             </div>
                             <div class="form__item">
                                 <label for="formNumber" class="form__label">Мобильный телефон*:</label>
-                                <input id="formNumber" type="text" name="number" class="form__input">
+                                <input id="formNumber" type="text" name="number" class="form__input _req">
                             </div>
                             <div class="form__item">
                                 <label for="formMessage" class="form__label">Пожелания к приему*:</label>
-                                <textarea name="message" id="formMessage" class="form__input"></textarea>
+                                <textarea name="message" id="formMessage" class="form__input _req"></textarea>
                             </div>
                             <button type="submit" class="form__button">отправить</button>
                         </form>
@@ -215,5 +214,7 @@
         
     </div>
 </footer></div>
+    <script src="js/script.js"></script>
+    <script src="js/form.js"></script>
 </body>
 </html>
