add photo at main page

--- a/index.html
+++ b/index.html
@@ -68,7 +68,12 @@
                         </a>
                     </div>
                 </div>
-            </div>       
+            </div>  
+            <div class="container-img__flex">
+                <div class="container-img__image">
+                    <img src="img/main/man.png" alt="Степанов Дмитрий Валерьевич">
+                </div>
+            </div>      
         </div>
         <div class="main-info">
             <div class="main-info__flex-wrapper">
