--- a/#source/header.html
+++ b/#source/header.html
@@ -1,5 +1,6 @@
 <header>
     <div class="header-wrapper">
+    <a href="index.html">
         <div class="header-wrapper__logo">
             <img class="header-wrapper__img-logo" src="img/header/logo.jpg" alt="логотип СДВ Медико">
             
@@ -8,11 +9,12 @@
                 <p class="second">Реабилитационный <br> центр</p>
             </div>
         </div>
+    </a>
 
         <nav class="header-wrapper__navigation">
             <ul>
                 <li>УСЛУГИ</li>
-                <li>КОНТАКТЫ</li>
+                <li><a href="#popup">КОНТАКТЫ</a></li>
                 <li>О НАС</li>
             </ul>
         </nav>
@@ -40,6 +42,29 @@
                     <li> <a href="#">Контакты</a></li>
                     <li><a href="#">О нас</a></li>
                 </ul>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div id="popup" class="popup">
+    <a href="#" class="popup__area"></a>
+    <div class="popup__body">
+        <div class="popup__content">
+            <a href="#" class="popup__close">+</a>
+            <div class="heading"><h2>Свяжитесь с нами:</h2></div>
+            <div class="popup__wrapper-contacts">
+                <div><span class="bold">Контактный телефон:<br></span>  +7 931 394 60 33</div>
+                <div><span class="bold">E-mail:<br></span> rigveda.sbor@yandex.ru</div>
+            </div>
+
+            <div class="popup__adres-contacts">
+                <span class="bold">Адрес:</span>
+                <br>Россия<br> 188541<br>
+                Ленинградская область<br>
+                г. Сосновый Бор<br>
+                Красных Фортов, 20A<br>​​
+                Офис Н-117 <br>          
             </div>
         </div>
     </div>
